in the middle of progress

--- a/Notifications/app/src/main/res/layout/activity_main.xml
+++ b/Notifications/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="notificationButtonClicked"
-        android:text="Notification Button"
-        tools:layout_editor_absoluteX="103dp"
+        android:onClick="showNotification"
+        android:text="Button"
+        tools:layout_editor_absoluteX="148dp"
         tools:layout_editor_absoluteY="259dp" />
 </android.support.constraint.ConstraintLayout>
