--- a/Notifications/app/src/main/res/layout/activity_main.xml
+++ b/Notifications/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="29dp"
+        tools:layout_editor_absoluteY="185dp">
 
         <EditText
             android:id="@+id/edit_text_title"
@@ -42,12 +44,20 @@
 
         <Button
             android:id="@+id/button2"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="showNotification2"
             android:text="Notification Channel 2"
             tools:layout_editor_absoluteX="93dp"
             tools:layout_editor_absoluteY="351dp" />
+
+        <Button
+            android:id="@+id/dialogButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="showAlertBox"
+            android:text="Remove Notification Channel 2" />
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
