--- a/Notifications/app/src/main/res/layout/activity_main.xml
+++ b/Notifications/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
 
         <Button
             android:id="@+id/button2"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="showNotification2"
             android:text="Notification Channel 2"
@@ -56,7 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="showAlertBox"
-            android:text="Remove Notification Channel 2" />
+            android:text="APP EXIT" />
 
     </LinearLayout>
 
